CAY-2553 Wrong disjoint prefetch query qualifier
CAY-2573 DI field injection is triggered when creating sql Driver
CAY-2580 Cgen: Can't use custom templates for client mode
CAY-2582 Double insert of manyToMany relationship mapped to Set
CAY-2584 Crypto: can't use ColumnSelect with encrypted columns
CAY-2586 Char can't be materialized to EnumType in some cases
CAY-2594 DbImport: AutoAdapter resolving inside an import operation hangs up the op on Hana DB
CAY-2595 ObjAttributes are not sorted in alphabetical ordering on save

----------------------------------
Release: 4.1.B2
Date: May 4, 2019
----------------------------------

Changes:

CAY-2570 Use MySQL adapter for latest versions of MariaDB

Bug Fixes:

CAY-2506 Java class generated for Embeddable object is not serializable
CAY-2538 Modeler: dbImport configuration unclear behavior
CAY-2550 Modeler: ObjAttribute inspector modifies wrong columns in attribute table
CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
CAY-2561 Modeler: cgen type combobox doesn't set templates
CAY-2564 No import for Property after generation classes with pk properties
CAY-2566 Flush action generates update for PK attribute in case of toDepPK relationship
CAY-2568 Class Generation: Superclass Package setting persistence
CAY-2569 Custom 'Naming Strategy' in Cayenne Modeler
CAY-2572 Queries are not sorted by name in data map XML

----------------------------------
Release: 4.1.B1
Date: March 7, 2019
----------------------------------
Changes/New Features:

CAY-2446 Run Disjoint By Id queries outside of synchronized block
CAY-2447 Crypto support for LocalDateTime
CAY-2471 Support multiple XML project versions
CAY-2473 Modeler: cleanup attributes and relationship editors
CAY-2474 Modeler: swap buttons in dialog toolbar
CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table
CAY-2478 cgen: Generate properties for PK