@@ -21,6 +21,7 @@ CAY-2580 Cgen: Can't use custom templates for client mode
 CAY-2582 Double insert of manyToMany relationship mapped to Set
 CAY-2584 Crypto: can't use ColumnSelect with encrypted columns
 CAY-2586 Char can't be materialized to EnumType in some cases
+CAY-2591 Modeler: project becomes dirty after click on dbImport or cgen tab
 CAY-2594 DbImport: AutoAdapter resolving inside an import operation hangs up the op on Hana DB
 CAY-2595 ObjAttributes are not sorted in alphabetical ordering on save
 
